force-app/main/default/objects/Spreading_Threshold__c/Spreading_Threshold__c.object-meta.xml
<CustomObject>
    <description>One threshold rule belonging to a spreading policy.</description>
    <label>Spreading Threshold</label>
    <nameField>
        <label>Spreading Threshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spreading Thresholds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>