force-app/main/default/objects/Spreading_Threshold__c/fields/Applies_To_Material_Line__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Material_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applies To Material Line</label>
    <type>Checkbox</type>
</CustomField>