force-app/main/default/objects/Spreading_Threshold__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <label>Metric</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSCR</fullName>
            </value>
            <value>
                <fullName>FCCR</fullName>
            </value>
            <value>
                <fullName>Current Ratio</fullName>
            </value>
            <value>
                <fullName>Debt / EBITDA</fullName>
            </value>
            <value>
                <fullName>Debt-to-Worth</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>AR Days</fullName>
            </value>
            <value>
                <fullName>Inventory Days</fullName>
            </value>
            <value>
                <fullName>Exact Match Rate</fullName>
            </value>
            <value>
                <fullName>Dollar Accuracy</fullName>
            </value>
            <value>
                <fullName>Certification Rate</fullName>
            </value>
            <value>
                <fullName>Uncaught Material Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>