force-app/main/default/objects/Spreading_Threshold__c/fields/Minimum_Value__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Value__c</fullName>
    <label>Minimum Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>