force-app/main/default/objects/Spreading_Threshold__c/fields/Narrative_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Narrative_Guidance__c</fullName>
    <label>Narrative Guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>