force-app/main/default/objects/Spreading_Threshold__c/fields/Requires_Exception_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Exception_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Exception Approval</label>
    <type>Checkbox</type>
</CustomField>