force-app/main/default/objects/Spreading_Threshold__c/fields/Severity_When_Failed__c.field-meta.xml
<CustomField>
    <fullName>Severity_When_Failed__c</fullName>
    <label>Severity When Failed</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
                <default>true</default>
                <label>Warning</label>
            </value>
            <value>
                <fullName>Policy Exception</fullName>
            </value>
            <value>
                <fullName>Hard Stop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>