force-app/main/default/objects/Spreading_Threshold__c/fields/Spreading_Policy__c.field-meta.xml
<CustomField>
    <fullName>Spreading_Policy__c</fullName>
    <label>Spreading Policy</label>
    <referenceTo>Spreading_Policy__c</referenceTo>
    <relationshipLabel>Thresholds</relationshipLabel>
    <relationshipName>Spreading_Thresholds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>